# CUDA_Adventures

./: README.md  meson.build
1_vector_addition/: meson.build  thrust.cu  vec_add.cu
2_reduction_prefixsum/: meson.build  prefixSum.cu  reduction.cu
3_matmul_rotation/: mallocPitch.cu  matmul.cu  meson.build  rotation.cu
4_convolution/: convolution.cu  fastConv_1D.cu  fastConv_2D.cu  meson.build
5_tensors/: matmul_tensors.cu  matvec.cu  meson.build
tools/: reduction.py
utils/: meson.build  utils.cu  utils.cuh
